--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,11 @@
 == README
 
 This app is a recipe tracker application based on Mackenzie Child's excellent rails tutorial series: https://mackenziechild.me/12-in-12/3/
+
+The app features include:
+
+– Users
+– Posts (Recipes)
+– Nested Forms
+– Image Uploading
+– HAML
